--- a/camp.html
+++ b/camp.html
@@ -55,8 +55,7 @@ Geschlafen wird in Zelten im Wald <em>Miecher</em> nahe Goeblange, in dem sich a
 
 <div class="title"><a name="wer">Wer darf mitmachen?</a></div>
 <div class="body1"><ul class="c2"><li>Gruppe 1: Jugendliche von 12-13 Jahren </li><li>Gruppe 2: Jugendliche ab 14 Jahren</li><li>Erwachsene sind nat&#252;rlich auch Willkommen!</li><li>Wichtig! Der Teilnehmer oder ein Elternteil muss Mitglied der <em>Georges Kayser Altertumsfuerscher a.s.b.l.</em> sein.</li></ul></div>
-<div class="title"><a name="wann">Wann? Wo?</a></div><div class="body1"><ul class="c2"><li>(abgesagt) <s>22. August - 29. August 2020</s></li></div><div class="body1"><ul class="c2"><li><s>Villa Borg bei Perl (D)</s></li>
-<!--<li>Anmeldeformular - <a href="camp_2013.pdf">PDF</a></li>--></ul></div>
+<div class="title"><a name="wann">Wann? Wo?</a></div><div class="body1"><ul class="c2"><li>22. August - 29. August 2021</li></div></ul>
 <div class="c3"><div class="c3-title"><img src="css/grafiken/list_3.png"> <a href="kontakt.html#mitgliedskarte"> Mitglied werden</a></div></div>
 
 
@@ -74,7 +73,12 @@ Geschlafen wird in Zelten im Wald <em>Miecher</em> nahe Goeblange, in dem sich a
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li>(abgesagt) <s>22-29/08/2020 <br>Jugendlager</s></li>
+        <li>14/03/2021 <br>Generalversammlung</li>
+        <li>05/04/2021 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li>
+        <li>22-29/08/2021 <br>Jugendlager</li>
+<!--         <li>08/2020 <br>Internationales Grabungscamp</li>
+        <li>12/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
+        <li>24/10/2021 <br>Tag der offenen Tür <i>Ausgriewermusée</i></li> -->
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
