--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -41,7 +41,6 @@
      <li>Lucie ZAMBON - <i>administrative Sekretärin</i></li>
 
     <li>Serge GRISSIUS - <i>beigeordneter Grabungsleiter</i></li>
-    <li>Patrick KAHR - <i>Webmaster</i></li>
     <li>Armand LEHNERT </li>
     <li>Vic LIPPERT</li>
     <li>Luc REICHLING</li>
@@ -71,7 +70,12 @@
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li>(abgesagt) <s>22-29/08/2020 <br>Jugendlager</s></li>
+        <li>14/03/2021 <br>Generalversammlung</li>
+        <li>05/04/2021 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li>
+        <li>22-29/08/2021 <br>Jugendlager</li>
+<!--         <li>08/2020 <br>Internationales Grabungscamp</li>
+        <li>12/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
+        <li>24/10/2021 <br>Tag der offenen Tür <i>Ausgriewermusée</i></li> -->
 
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
