--- a/villa.html
+++ b/villa.html
@@ -33,7 +33,7 @@
 <div id="map"><iframe width="563" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=5.9437,49.6605,6.0276,49.6958&amp;layer=mapnik&amp;marker=49.67748,5.97897" style="border: 1px solid #f1b671"></iframe><br /><small><a href="http://www.openstreetmap.org/?lat=49.67815&amp;lon=5.98565&amp;zoom=14&amp;layers=M&amp;mlat=49.67748&amp;mlon=5.97897">Karte vergr&#246;ssern</a> | <a href="https://maps.google.com/maps?q=Ruines+Gallo-Romaines,+Koerich,+Luxembourg&hl=en&ll=49.677237,5.98875&spn=0.031325,0.104628&sll=49.67646,5.985918&sspn=0.015663,0.052314&oq=Ruines+Gallo-RomainesKoerich+Luxembourg&hq=Ruines+Gallo-Romaines,&hnear=Koerich,+Capellen,+Luxembourg&t=h&z=14">Google Maps</a></small></div>
 
 <div class="title">Spezielle Veranstaltungen</div><div class="body1">
-<ul class="c2"><li>13/09/2020 - Tag der Offenen T&#252;r</li></ul>
+<ul class="c2"><li>12/09/2021 - Tag der Offenen T&#252;r</li></ul>
 </div>
 
 <div class="body2"><br><a name="miecher"><h3 class="c1">Etwas Geschichte ...</h3></a><h4><em>Miecher</em>, ein Ort an dem die R&#246;mer wohnten</h4>
@@ -60,7 +60,12 @@ Die hier im Wald aufgestellten Tafeln sollen Ihnen, liebe Besucher, die Lebensar
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li>(abgesagt) <s>22-29/08/2020 <br>Jugendlager</s></li>
+        <li>14/03/2021 <br>Generalversammlung</li>
+        <li>05/04/2021 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li>
+        <li>22-29/08/2021 <br>Jugendlager</li>
+<!--         <li>08/2020 <br>Internationales Grabungscamp</li>
+        <li>12/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
+        <li>24/10/2021 <br>Tag der offenen Tür <i>Ausgriewermusée</i></li> -->
 
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
