--- a/kalender.html
+++ b/kalender.html
@@ -36,7 +36,7 @@
 <div class="title">Veranstaltungskalender 2020</div><div class="body1">
   <ul class="c2">
     <li>14/03/2021 - Generalversammlung</li>
-    <li>05/04/2021 - Keltische Handwerker im <i>Ausgriewermusée</i></li>
+    <li>05/04/2021 - <s>Keltische Handwerker im <i>Ausgriewermusée</i></s></li>
     <li>22-29/08/2021 - Jugendlager</li>
     <li>08/2021 - Internationales Grabungscamp</li>
     <li>12/09/2021 - Tag der offenen Tür Villa Goeblingen/Miecher</li>
@@ -60,7 +60,7 @@
    <div id="calendar">
      <ul class="calendar">
         <li>14/03/2021 <br>Generalversammlung</li>
-        <li>05/04/2021 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li>
+        <li>05/04/2021 <br><s>Keltische Handwerker im <i>Ausgriewermusée</i></s></li>
         <li>22-29/08/2021 <br>Jugendlager</li>
 <!--         <li>08/2020 <br>Internationales Grabungscamp</li>
         <li>12/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
