--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -41,15 +41,17 @@
      <li>Lucie ZAMBON - <i>administrative Sekretärin</i></li>
 
     <li>Serge GRISSIUS - <i>beigeordneter Grabungsleiter</i></li>
-    <li>Armand LEHNERT </li>
+    <li>Livia HOFFMAN</li>
     <li>Vic LIPPERT</li>
     <li>Luc REICHLING</li>
     <li>Pia RIES</li>
+    <li>Georges SCHAUL</li>
     <li>Christian THEIS</li>
     <li>Georges WEBER</li>
 
      <br>
      <li><i>Michel BAUDET</i> - <i>Berater des Vorstandes</i></li>
+     <li><i>Armand LEHNERT</i> - <i>Finanzberater des Vorstandes</i></li>
 </ul></div>
  
  
@@ -71,7 +73,7 @@
    <div id="calendar">
      <ul class="calendar">
         <li>14/03/2021 <br>Generalversammlung</li>
-        <li>05/04/2021 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li>
+        <li>05/04/2021 <br><s>Keltische Handwerker im <i>Ausgriewermusée</i></s></li>
         <li>22-29/08/2021 <br>Jugendlager</li>
 <!--         <li>08/2020 <br>Internationales Grabungscamp</li>
         <li>12/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
