--- a/kalender.html
+++ b/kalender.html
@@ -30,7 +30,7 @@
   <div id="body"><div><h3 class="c1">Veranstaltungskalender</h3>
 <p>Hier finden Sie alle derzeit geplanten Veranstaltungen die von uns organisiert werden oder an welchen wir teilnehmen.</p>
 <div class="title">N&#228;chste Veranstaltung</div>
-      <div class="cal"><h4>14. März -  Generalversammlung</h4>
+      <div class="cal"><h4>22.-29. August -  Jugendlager</h4>
           <!--<p class="cal"><a href="camp.html">Mehr dazu</a></p>-->
       </div>
 <div class="title">Veranstaltungskalender 2020</div><div class="body1">
@@ -59,12 +59,10 @@
   </div>
    <div id="calendar">
      <ul class="calendar">
-        <li>14/03/2021 <br>Generalversammlung</li>
-        <li>05/04/2021 <br><s>Keltische Handwerker im <i>Ausgriewermusée</i></s></li>
         <li>22-29/08/2021 <br>Jugendlager</li>
-<!--         <li>08/2020 <br>Internationales Grabungscamp</li>
-        <li>12/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
-        <li>24/10/2021 <br>Tag der offenen Tür <i>Ausgriewermusée</i></li> -->
+        <li>08/2021 <br>Internationales Grabungscamp</li>
+        <li>12/09/2021 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
+        <!--<li>12/09/2021 <br>Tag der offenen Tür <i>Ausgriewermusée</i></li> -->
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
